# llm-agenticAI-for-business

./: README.md  pyproject.toml  requirements.txt
01-Marketing/: app.py
01-Marketing-LLM/: app.ipynb
02-Customer-service-RAG/: app.ipynb  app.py
02-Customer-service-RAG/index_faiss/: index.faiss  index.pkl
index_faiss/: index.pkl
