[project]
name = "projetos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "ipywidgets>=8.1.8",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.3",
    "streamlit>=1.58.0",
]
