[project]
name = "projetos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "faiss-cpu>=1.14.3",
    "ipywidgets>=8.1.8",
    "langchain>=1.3.11",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "torchvision>=0.27.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
